syntax = "proto3";

package shared.v1;
option go_package = "github.com/studyguides-com/study-guides-api/api/v1/shared;sharedv1";

import "google/protobuf/timestamp.proto";


message User {
	string id = 1;
	optional string name = 2;
	optional string gamer_tag = 3;
	optional string email = 4;
	optional google.protobuf.Timestamp email_verified = 5;
	optional string image = 6;
	optional string content_tag_id = 7;
}